--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd-mobile": "^2.3.4",
+    "axios": "^0.21.1",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "stylus": "^0.54.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
