--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-bmapgl": "^0.1.21",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
