--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
+    "less": "^4.1.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bmapgl": "^0.1.21",
